--- a/main.html
+++ b/main.html
@@ -22,7 +22,8 @@
                         <h2 class="blue wide upper">Profile</h2>
                         <p><strong>Date of birth:</strong> 1 Sept. 1992</p>
                         <p><strong>Nationality:</strong> Namibian</p>
-                        <p>I have over 6 years of experience in structural engineering with a broad range of expertise
+                        <p>I have over <span id="years">6</span> years of experience in structural engineering with a
+                            broad range of expertise
                             in
                             designing multi-use, industrial, military, commercial, and transportation structures.</p>
                         <p>My passion for software and programming has equipped me with extensive knowledge of Microsoft
@@ -67,7 +68,8 @@
                         <p><strong>Phone</strong></p>
                         <p>+264 81 886 4987</p>
                         <p><strong>Email</strong></p>
-                        <p>willemlouw1@gmail.com</p>
+                        <!-- <p>willemlouw1@gmail.com</p> -->
+                        <p><a href="mailto: willem.louw1@gmail.com">willem.louw1@gmail.com</a></p>
 
                         <br><br>
 
@@ -83,12 +85,13 @@
 
                         <br><br>
 
-                        <h2 class="blue wide upper">Experience</h2>
+                        <h2 class="blue wide upper">Software</h2>
                         <p><strong>CAD</strong></p>
                         <ul>
                             <li>AutoCAD</li>
                             <li>Revit</li>
                             <li>Prokon</li>
+                            <li>Probar 2D</li>
                         </ul>
                         <br>
                         <p><strong>Programming</strong></p>
@@ -114,7 +117,100 @@
     <!-- Page 2 -->
     <page size="A4">
         <section>
-            <h1 class="wide blue">Experience 1/4</h1>
+            <h1 class="wide blue">Experience 1/5</h1>
+            <br>
+            <div class="row">
+                <div class="col">
+                    <!-- Job 1 -->
+                    <div class="card m-16">
+                        <h2 class="blue">Windhoek to Hosea Kutako International Airport Freeway - Ph2A and Ph2B, Namibia
+                        </h2>
+                        <p><strong>Involvement Period: </strong>2023</p>
+                        <p><strong>Client: </strong>Roads Authority of Namibia</p>
+                        <p><strong>Est. Project Value: </strong>NAD 1 500 million</p>
+
+                        <p>Detailed design for the 45 km long dual carriageway freeway. Geometric design included ten
+                            interchanges of varying complexity with twelve twin-spine prestressed bridges. Also included
+                            were the structural design and supervision of road-over-road, road-over-rail, and several
+                            river bridges. The road traverses rolling terrain, requiring the construction of over
+                            4.5-million cubic meters of cut-to-fill over a 10 km long section.</p>
+
+                        <p><strong>Role: </strong>Structural Engineer</p>
+
+                        <p>Responsible for the design of two retaining walls spanning 116 m collectively with a maximum
+                            height of 7.6 m. Design of a road-over-rail bridge deck and bearings.
+                        </p>
+
+                        <p><strong>Role: </strong>Structural Assistant Resident Engineer</p>
+
+                        <p>Responsible for the supervision of the construction of a road-over-rail, two river and four
+                            prestressed interchange bridges. This includes the checking the setting out of works,
+                            checking calculations for contractor's staging works and temporary formwork, inspection of
+                            all formwork and temporary work, supervision of installation of bridge bearings, checking of
+                            all staging works, inspection of all shuttering and reinforcing steel works
+                            and placement of the post-tensioning ducts, supervision of concrete casting, supervision and
+                            calculation checks for the post-tensioning of the cables, supervision of grouting of the
+                            dusts, supervision of the construction of the stone pitching
+                            and parapets.
+
+
+                        </p>
+                        <p>Contract administration including: ensuring contractors adherence with project
+                            specifications, monitoring contractor's progress, calculation of quantities, checking
+                            contractor's payment certificates, assisting with claims from the Contractor, ensuring
+                            Contractors adherence with Environmental Management Plan.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <!-- Job 2 -->
+
+                    <!-- Job 3 -->
+                    <div class="card m-16">
+                        <h2 class="blue">St. Martin Hospital Ward and Conference Centre, Oshikuku</h2>
+                        <p><strong>Involvement Period: </strong>2023</p>
+                        <p><strong>Client: </strong>Roman Catholic Church</p>
+                        <p><strong>Est. Project Value: </strong>NAD 12.3 million</p>
+
+                        <p>Construction of a new staff ward (10 single room and 2 double room) as well as a new
+                            conference centre at the St. Martin Hospital, Oshikuku.</p>
+
+                        <p><strong>Role: </strong>Structural Engineer</p>
+
+                        <p>Responsible for the designing of the foundations, surface bed, reinforced concrete columns
+                            and beams. Design of steel roof structures. Cost estimation.
+                        </p>
+                    </div>
+                    <!-- Job 4 -->
+                    <div class="card m-16">
+                        <h2 class="blue">NEOM Trojena, <br>Kingdom of Saudi Arabia</h2>
+                        <p><strong>Involvement Period: </strong>2023</p>
+                        <p><strong>Client: </strong>Mohammed bin Salman Al Saud</p>
+                        <p><strong>Est. Project Value: </strong>NAD 9 265 000 million</p>
+
+                        <p>Construction of a 2.8-km-long man-made freshwater lake and luxury ski resort that will cover
+                            an area of nearly 60 square kilometers. Detailed design of utility tunnels infrastructure
+                            and stormwater structures for the proposed NEOM Mountain Lake in the Kingdom of Saudi
+                            Arabia.</p>
+
+                        <p><strong>Role: </strong>Structural Engineer</p>
+
+                        <p>Responsible for the design and modelling of 23 sub-ground level reinforced concrete Detention
+                            Tanks, 15 Settling Tanks and 10 reinforced concrete Root Zone Treatment Plants that will
+                            collectively require more than 28 000 m³ of concrete.
+                            Tasks included earth retaining calculations, earthquake calculations, automation of mass
+                            editing and renaming of drawing files, cost estimation, writing of Design Report.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </page>
+
+    <!-- Page 3 -->
+    <page size="A4">
+        <section>
+            <h1 class="wide blue">Experience 2/5</h1>
             <br>
             <div class="row">
                 <div class="col">
@@ -144,8 +240,8 @@
                         <p><strong>Client: </strong>Roads Authority of Namibia</p>
                         <p><strong>Est. Project Value: </strong>NAD 300 million</p>
 
-                        <p>Approximately 69.3 km of Low Volume Seal, 14 at-grade intersections to provide access, Two
-                            bridges, over Tsondab River and over Agama River, Several major and minor culverts, Possible
+                        <p>Approximately 69.3 km of Low Volume Seal, 14 at-grade intersections to provide access, two
+                            bridges, over Tsondab River and over Agama River, several major and minor culverts, possible
                             rest areas.</p>
 
                         <p><strong>Role: </strong>Engineer</p>
@@ -172,7 +268,8 @@
                         <p><strong>Role: </strong>Structural Engineer</p>
 
                         <p>Responsible for the designing, draughting and supervision of several structures including a
-                            660 m2 office building and a 1700 m2 workshop housing a 32-ton overhead crane. This included
+                            660&nbsp;m² office building and a 1700 m² workshop housing a 32-ton overhead crane. This
+                            included
                             the structural modelling and design of the 120-ton steel workshop consisting of foundations,
                             250-400 mm surfecebed, steel columns, trusses, plate girder of the crane and connection
                             details. Designing of a 14 m steel truss for the office building. Reinforcement detailing
@@ -199,10 +296,10 @@
         </section>
     </page>
 
-    <!-- Page 3 -->
+    <!-- Page 4 -->
     <page size="A4">
         <section>
-            <h1 class="wide blue">Experience 2/4</h1>
+            <h1 class="wide blue">Experience 3/5</h1>
             <br>
             <div class="row">
                 <div class="col">
@@ -215,7 +312,7 @@
 
                         <p>Construction of a new mall near Okahandja, Namibia consisting of 5 standalone buildings
                             constructed with concrete superstructures and steel truss roofs with a total build area of
-                            3700 m².</p>
+                            3700&nbsp;m².</p>
 
                         <p><strong>Role: </strong>Structural Engineer</p>
 
@@ -232,8 +329,8 @@
 
                         <p>Feasibility Study for The Upgrade to Bitumen Standard of M0074 (270.35 km): Grootfontein to
                             Tsumkwe. Study of drainage and hydrology as well as structural designs of minor and major
-                            culverts as well as bridges for the upgrade of M74 in line with the prevailing Roads
-                            Manuals).</p>
+                            culverts as well as bridges for the upgrade of M0074 in line with the prevailing Roads
+                            Manuals.</p>
 
                         <p><strong>Role: </strong>Engineer</p>
 
@@ -284,10 +381,10 @@
     </page>
 
 
-    <!-- Page 4 -->
+    <!-- Page 5 -->
     <page size="A4">
         <section>
-            <h1 class="wide blue">Experience 3/4</h1>
+            <h1 class="wide blue">Experience 4/5</h1>
             <br>
             <div class="row">
                 <div class="col">
@@ -360,17 +457,17 @@
                         <p>Responsible for the structural designs, draughting, quantity calculations, assistance in
                             project management. Aiding in the designing and draughting of several aspects of the new
                             building (including retaining walls, entrance overhead slab, fire escape staircase and
-                            modelling of Block B of the building).</p>
+                            modelling of Block&nbsp;B of the building).</p>
                     </div>
                 </div>
             </div>
         </section>
     </page>
 
-    <!-- Page 5 -->
+    <!-- Page 6 -->
     <page size="A4">
         <section>
-            <h1 class="wide blue">Experience 4/4</h1>
+            <h1 class="wide blue">Experience 5/5</h1>
             <br>
             <div class="row">
                 <div class="col">
@@ -427,7 +524,8 @@
 
                         <p><strong>Role: </strong>Structural Engineer</p>
 
-                        <p>Responsible for the Structural Designs (Ring beams) for 4 buildings, Quantity Calculations.
+                        <p>Responsible for the structural designs and detailing of ring beams for 4 buildings, quantity
+                            calculations.
                         </p>
                     </div>
 
@@ -459,9 +557,12 @@
         </section>
     </page>
 
-
-    <button>Print Webpage</button>
-
+    <div id="btn" style="text-align: center">
+        <button class="card">Print Webpage</button>
+    </div>
+    <script>
+        document.getElementById("years").innerHTML = parseInt(new Date().getFullYear()) - 2017;
+    </script>
     <script src="script.js"></script>
 </body>
 
