Removed the 0.5cm at the top.

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <page size="A4" style="margin-top: 0.5cm;">
+    <page size="A4">
         <section>
             <h1 class="wide blue">Willem Louw</h1>
             <h2 style="font-weight: 400;" class="m-16">Civil & Structural Engineer | Software Developer</h2>
@@ -647,5 +647,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
