Update employment record and remove extra line breaks in main.html

--- a/main.html
+++ b/main.html
@@ -76,7 +76,7 @@
                         <p><strong>Email: </strong><a href="mailto: willem.louw1@gmail.com">willem.louw1@gmail.com</a>
                         </p>
 
-                        <br><br>
+                        <br>
 
                         <h2 class="blue wide upper">Certifications</h2>
                         <!-- <h3>Sep 2019</h3> -->
@@ -92,22 +92,25 @@
                         <p><strong>University of Cape Town: </strong> Advanced Project Management</p>
 
 
-                        <br><br>
+                        <br>
 
                         <h2 class="blue wide upper">Languages</h2>
                         <p><strong>English: </strong>Excellent speaking, reading & writing</p>
                         <p><strong>Afrikaans: </strong>Excellent speaking, reading & writing</p>
 
-                        <br><br>
+                        <br>
 
                         <h2 class="blue wide upper">Employment Record</h2>
-                        <h3>Nov 2020 - Present</h3>
+                        <h3>Nov 2025 - Present</h3>
+                        <p><strong>Civil & Structural Engineer</strong> @ WCE Consulting Engineers</p>
+                        <br>
+                        <h3>Nov 2020 - Nov 2025</h3>
                         <p><strong>Structural Engineer</strong> @ SMEC Namibia Consulting Engineers</p>
                         <br>
-                        <h3>Feb 2017 - Nov 2020</h3>
+                        <h3>Jan 2017 - Nov 2020</h3>
                         <p><strong>Structural Engineer</strong> @ WML Consulting Engineers</p>
 
-                        <br><br>
+                        <br>
 
                         <h2 class="blue wide upper">Software</h2>
                         <p><strong>CAD: </strong>AutoCAD, Revit, Prokon, Probar 2D</p>
